--- a/app/views/sounds/show.html.erb
+++ b/app/views/sounds/show.html.erb
@@ -8,12 +8,12 @@ next_index = sound_index < @sounds.size - 1 ? sound_index + 1 : 0;
 
 <div id='showsound'>
 	<p id='showfeatures'>
-		<%= feature_chart('loudness', @sound.trajectory(:loudness)[0], 0, 'ab4444') %><br/>
-		<%= feature_chart('temporal sparsity', @sound.trajectory(:temporal_sparsity)[0], 'auto', '44ab44') %><br/>
-		<%= feature_chart('spectral sparsity', @sound.trajectory(:spectral_sparsity)[0], 'auto', '4444ab') %><br/>
-		<%= feature_chart('spectral centroid', @sound.trajectory(:spectral_centroid)[0], 'auto', 'abab44') %><br/>
-		<%= feature_chart('transient index', @sound.trajectory(:transient_index)[0], 'auto', '44abab') %><br/>
-		<%= feature_chart('harmonicity', @sound.trajectory(:harmonicity)[0], 'auto', 'ab44ab') %><br/>
+		<%= feature_chart('loudness', @sound.features[:loudness], 0, 'ab4444') %><br/>
+		<%= feature_chart('temporal sparsity', @sound.features[:temporal_sparsity], 'auto', '44ab44') %><br/>
+		<%= feature_chart('spectral sparsity', @sound.features[:spectral_sparsity], 'auto', '4444ab') %><br/>
+		<%= feature_chart('spectral centroid', @sound.features[:spectral_centroid], 'auto', 'abab44') %><br/>
+		<%= feature_chart('transient index', @sound.features[:transient_index], 'auto', '44abab') %><br/>
+		<%= feature_chart('harmonicity', @sound.features[:harmonicity], 'auto', 'ab44ab') %><br/>
 	</p>
 	
 	<div id='shownavigation'>
@@ -21,9 +21,10 @@ next_index = sound_index < @sounds.size - 1 ? sound_index + 1 : 0;
 		<h1 id='current'><%= @sound.id %>
 		<h1 id='next'><%= link_to @sounds[next_index].id, @sounds[next_index] %>
 	</div>
+	
 	<p id='showdetails'>
 		<b>Filename: </b><%=h @sound.filename %><br/>
-		<b>Duration: </b><%=h sprintf('%.2f', @sound.samples.to_f / @sound.sample_rate.to_f) %> s (<%= @sound.samples %> samples, <%= @sound.frames %> frames)<br/>
+		<b>Duration: </b><%=h sprintf('%.2f', @sound.samples.to_f / @sound.sample_rate.to_f) %>s (<%= @sound.samples %> samples, <%= @sound.frames %> frames)<br/>
 		<b>Sample rate: </b><%=h @sound.sample_rate %><br/>
 		<b>Frame length: </b><%=h @sound.frame_length %>s (<%= @sound.frame_size %> samples)<br/>
 		<b>Hop size: </b><%=h @sound.hop_length %>s (<%= @sound.hop_size%> samples)<br/>
@@ -32,7 +33,8 @@ next_index = sound_index < @sounds.size - 1 ? sound_index + 1 : 0;
 		<b>Created at: </b><%=h @sound.created_at %><br/>
 		<b>Updated at: </b><%=h @sound.updated_at %>
 	</p>
-
+	
+	
 	<p>
 	<%= link_to 'Sound index', sounds_path %><br/>
 	<%= link_to 'Delete sound', @sound, :confirm => 'Are you sure?', :method => :delete %>
