--- a/app/views/sounds/new.html.erb
+++ b/app/views/sounds/new.html.erb
@@ -1,23 +1,3 @@
 <h1>New sound</h1>
 
-<% form_for @sound, :html => {:multipart => true} do |form| %>
-	<%= form.error_messages %>
-	
-	<p>
-		<%= label_tag 'Sound File' %><br />
-		<%= file_field :upload, :file %>
-	</p>
-	<p>
-		<%= form.label :description %><br />
-		<%= form.text_area :description %>
-	<p>
-	<p>
-		<%= form.label :latitude %><br />
-		<%= form.text_field :latitude %><br />
-		<%= form.label :longitude %><br />
-		<%= form.text_field :longitude %><br />
-	</p>
-	<p>
-		<%= form.submit 'Save' %>
-	</p>
-<% end %>
+<%= render :partial => 'form' %>
