--- a/app/views/soundwalks/_form.html.erb
+++ b/app/views/soundwalks/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for([@user, @soundwalk], :html => {:multipart => true}) do |form| %>
+<% form_for(@soundwalk, :html => {:multipart => true}) do |form| %>
 	<%= form.error_messages %>
 	
 	<p>
