--- a/app/views/shared/_sounds_map.html.erb
+++ b/app/views/shared/_sounds_map.html.erb
@@ -15,7 +15,7 @@ end
 
 # Sounds
 @sounds.each do |sound|
-	html = 'Sound ' + sound.id.to_s + '<br />' + embed_sound_tag(sound)
+	html = 'Sound ' + sound.id.to_s + '<br />' + embed_sound_tag(@soundwalk, sound)
 	map.markers << GoogleMapMarker.new(:map => map, :lat => sound.lat, :lng => sound.lng, :html => html, :icon => medium_marker_icon)
 end
 
