--- a/app/views/shared/_sounds_map.html.erb
+++ b/app/views/shared/_sounds_map.html.erb
@@ -32,6 +32,6 @@ map.overlays << GoogleMapPolyline.new(:vertices => vertices, :color => '#55ef55'
 %>
 
 <%= map.to_html %>
-<div id='indexmap'>
+<div id='soundwalk_map'>
 	<%= map.div %>
 </div>
