--- a/app/views/soundwalks/_form.html.erb
+++ b/app/views/soundwalks/_form.html.erb
@@ -1,20 +1,24 @@
 <% form_for(@soundwalk, :html => {:multipart => true}) do |form| %>
-	<%= form.error_messages %>
-	
-	<p>
-		<%= label_tag 'GPS file' %><br />
-		<%= file_field :upload, :locations_file %>
+	<p class='field'>
+		<%= label_tag 'GPS file', label_with_errors(@soundwalk, 'upload', 'GPS file') %>
+		<label class='file_wrapper'>
+			(Click to upload file.)
+			<%= file_field :upload, :locations_file, :class => 'file' %>
+		</label>
 	</p>
-
-	<p>
-		<%= form.label :title %><br />
+	<p class='field'>
+		<%= form.label :title, label_with_errors(@soundwalk, 'title', 'Title') %>
 		<%= form.text_field :title %>
 	<p>
-	<p>
-		<%= form.label :description %><br />
+	<p class='field'>
+		<%= form.label :description, label_with_errors(@soundwalk, 'description', 'Description') %>
 		<%= form.text_area :description %>
 	</p>
-	<p>
+	<p class='submit'>
 		<%= form.submit 'Save' %>
 	</p>
 <% end %>
+
+<script type='text/javascript'>
+	SI.Files.stylizeAll();
+</script>
