--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,19 +1,28 @@
-<h1>Sign up as a new user</h1>
-<% @user.password = @user.password_confirmation = nil %>
+<h1>Sign up to listen in</h1>
+<% @user.password = nil %>
 
-<%= error_messages_for :user %>
 <% form_for :user, :url => users_path do |f| -%>
-<p><%= label_tag 'login' %><br/>
-<%= f.text_field :login %></p>
+	<p class='field'>
+		<%= f.label :name, label_with_errors(@user, 'name', 'Full name') %>
+		<%= f.text_field :name %>
+	</p>
+	
+	<p class='field'>
+		<%= f.label :login, label_with_errors(@user, 'login', 'Username') %>
+		<%= f.text_field :login %>
+	</p>
 
-<p><%= label_tag 'email' %><br/>
-<%= f.text_field :email %></p>
+	<p class='field'>
+		<%= f.label :email, label_with_errors(@user, 'email', 'Email') %>
+		<%= f.text_field :email %>
+	</p>
 
-<p><%= label_tag 'password' %><br/>
-<%= f.password_field :password %></p>
+	<p class='field'>
+		<%= f.label :password, label_with_errors(@user, 'password', 'Password') %>
+		<%= f.password_field :password %>
+	</p>
 
-<p><%= label_tag 'password_confirmation', 'Confirm Password' %><br/>
-<%= f.password_field :password_confirmation %></p>
-
-<p><%= submit_tag 'Sign up' %></p>
+	<p class='submit'>
+		<%= submit_tag 'Sign up' %>
+	</p>
 <% end -%>
