theme etc. worked out

--- a/app/views/shared/_sounds_map.html.erb
+++ b/app/views/shared/_sounds_map.html.erb
@@ -31,7 +31,7 @@ map.overlays << GoogleMapPolyline.new(:vertices => vertices, :color => '#55ef55'
 
 %>
 
-<%= map.to_html %>
-<div id='soundwalk_map'>
-	<%= map.div %>
+<%#= map.to_html %>
+<div id='soundwalk-map'>
+	<%#= map.div %>
 </div>
