--- a/app/views/soundwalks/new.html.erb
+++ b/app/views/soundwalks/new.html.erb
@@ -1,3 +1,14 @@
 <h1>New Soundwalk</h1>
 
+<div id='new-soundwalk'>
+	<div class='help'>
+		<p>
+			Here is some text that will display help for uploading soundwalks to the server.
+		</p>
+		<p>
+			This will contain help for uploading kml/gpx files as well as a link to the App
+			Store to pick up the iPhone application.
+		</p>
+	</div>
 <%= render :partial => 'form' %>
+</div>
