--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,96 +1,244 @@
 body {
-	background: #fafafa;
-	font-family: "Lucida Sans Unicode", "Lucida Granda", Verdana, Arial, Helvetica, sans-serif;
-	font-size: 80%;
-	padding: 16px;
-}
+  font-family: Lucida Sans Unicode, Lucida Grande, Verdana, Arial, Helvetica, sans-serif;
+  background-color: #efebe6;
+  font-size: 1em; }
 
 strong, em, b, i {
-	font-family: "Lucida Sans", "Lucida Sans Unicode", "Lucida Grande", Verdana, Arial, Helvetica, sans-serif;
-}
+  font-family: Lucida Sans, Lucida Sans Unicode, Lucida Grande, Verdana, Arial, Helvetica, sans-serif; }
+
+.clear {
+  clear: both;
+  width: 0;
+  height: 0;
+  margin: 0;
+  padding: 0; }
+
+h1 {
+  width: 100%;
+  margin: 0;
+  margin-bottom: 1em;
+  padding: 0;
+  padding-bottom: 0.5em;
+  border-bottom: 1px dashed #a3bfbf;
+  font-size: 1.5em;
+  color: #bf3030;
+  text-align: center; }
+
+a {
+  color: #223241;
+  text-decoration: none; }
 
 #notice {
-	color: green;
-}
+  color: #9dbf30; }
 
-#indexmap {
-	width: 100%;
-	height: 250px;
-}
+#strip {
+  width: 60em;
+  margin: 2em auto 0 auto;
+  padding: 0 1em 0 1em;
+  border-bottom: 0.125em solid #223241;
+  text-align: center; }
+  #strip #user-panel {
+    float: right;
+    color: #223241;
+    width: 45em;
+    margin: 0;
+    padding: 1.5em 0 0 1.5em;
+    text-align: left; }
+    #strip #user-panel a {
+      color: #bf3030;
+      text-decoration: none;
+      font-weight: bold; }
+  #strip.little {
+    width: 35em; }
 
-#indextable {
-	width: 100%;
-}
+#body {
+  width: 60em;
+  margin: 0 auto 0 auto;
+  padding: 1em;
+  border: 1px solid #a3bfbf;
+  background-color: white;
+  text-align: left; }
+  #body #menu {
+    text-align: left;
+    margin-bottom: 1em; }
+  #body #footer {
+    margin-top: 1em;
+    padding: 1em;
+    bottom: 0;
+    border-top: 1px dashed #a3bfbf;
+    font-size: 0.7em;
+    text-align: right; }
+  #body.little {
+    width: 35em; }
 
-#indexcontainer {
-	width: 100%;
-}
+form {
+  text-align: left;
+  margin: 0 auto 0 auto; }
 
-#showmap {
-	width: 318px;
-	height: 318px;
-}
+.error {
+  font-size: 0.7em;
+  color: #bf3030; }
 
-#showsound {
-	width: 950px;
-}
+label.field {
+  display: block;
+  float: left;
+  height: 1.2em;
+  width: 8em;
+  margin: 0.5em;
+  padding: 0.5em;
+  text-align: right;
+  color: #888888; }
+label.field-nofloat {
+  color: #888888; }
 
-#shownavigation {
-	text-align: center;
-}
+input {
+  font-size: 1em; }
+  input.field {
+    -moz-border-radius: 0.5em;
+    -webkit-border-radius: 0.5em;
+    border-radius: 0.5em;
+    border: 1px dashed #888888;
+    width: 20em;
+    height: 1.2em;
+    margin: 0.5em;
+    padding: 0.5em; }
+  input.field-nofloat {
+    margin: 0.5em;
+    margin-left: 10.5em; }
+  input.submit {
+    margin: 0.5em;
+    margin-left: 10.5em;
+    width: 11em; }
+  input.button {
+    width: 7.5em;
+    margin: 0.5em; }
+  input.actualfile {
+    -moz-border-radius: 0.5em;
+    -webkit-border-radius: 0.5em;
+    border-radius: 0.5em;
+    border: 1px dashed #888888;
+    width: 11.5em;
+    height: 1.2em;
+    margin: 0.5em;
+    padding: 0.5em; }
+  input.file {
+    position: relative;
+    text-align: right;
+    opacity: 0;
+    z-index: 2;
+    width: 22em;
+    font-size: 1em;
+    height: 3.5em; }
 
-#previous {
-	font-size: 4em;
-	margin: -32px;
-	padding: 0;
-	line-height: 2em;
-	display: inline;
-	vertical-align: middle;
-}
+textarea.field {
+  -moz-border-radius: 0.5em;
+  -webkit-border-radius: 0.5em;
+  border-radius: 0.5em;
+  border: 1px dashed #888888;
+  font-family: Lucida Sans Unicode, Lucida Grande, Verdana, Arial, Helvetica, sans-serif;
+  width: 20em;
+  height: 10em;
+  margin: 0.5em;
+  padding: 0.5em;
+  font-size: 1em; }
 
-#previous a {
-	color: #cdcdcd;
-	text-decoration: none;
-}
+div.fileinput {
+  position: relative;
+  margin-left: 10em;
+  height: 3.5em; }
+div.fakefile {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+  margin: 0;
+  padding: 0;
+  width: 25em;
+  height: 100%; }
 
-#next {
-	font-size: 4em;
-	margin: -32px;
-	padding: 0;
-	display: inline;
-	vertical-align: middle;
-}
+#soundwalk-index-map {
+  display: block;
+  float: right;
+  border: 3px double #a3bfbf;
+  width: 25em;
+  height: 25em; }
 
-#next a {
-	color: #cdcdcd;
-	text-decoration: none;
-}
-#current {
-	font-size: 8em;
-	margin: 0;
-	padding: 0;
-	display: inline;
-	vertical-align: middle;
-}
+#soundwalk-map {
+  display: block;
+  float: right;
+  border: 3px double #a3bfbf;
+  width: 25em;
+  height: 25em; }
 
-#showdetails {
-}
+.stream_item {
+  width: 30em;
+  margin-top: 0.5em;
+  padding: 0.5em;
+  border: 1px dashed #a3bfbf; }
 
-#showfeatures {
-	width: 600px;
-	float: right;
-}
+.soundwalk_title {
+  display: block;
+  margin-bottom: 0.5em;
+  border-bottom: 1px dashed #a3bfbf;
+  font-weight: bold;
+  text-align: left; }
+
+.soundwalk_date {
+  display: block;
+  text-align: left;
+  float: right;
+  color: #888888;
+  font-size: .8em;
+  font-style: italic; }
+
+.soundwalk_description {
+  display: block;
+  text-align: left; }
+
+#profile-avatar {
+  float: left;
+  border: 3px double #a3bfbf;
+  margin-right: 1em; }
+
+#user-profile {
+  text-align: left; }
+  #user-profile h1 {
+    text-align: left; }
+
+#settings_profile {
+  margin: 0;
+  text-align: left;
+  margin-right: 1em; }
+
+#settings_privacy {
+  width: 100%;
+  margin: 0;
+  text-align: left; }
+
+.edit_user {
+  text-align: center;
+  width: 100%; }
+  .edit_user .submit input {
+    margin: 0; }
+
+#new-soundwalk .help {
+  display: block;
+  float: right;
+  text-align: left;
+  width: 27em; }
+#new-soundwalk form {
+  margin: 0;
+  width: 33em; }
 
 table {
-	margin: 4px;
-}
-
-td {
-	padding: 8px;
-}
-
-th {
-	background-color: #efefef;
-	padding: 8px;
-	text-align: left;
-}
+  width: 32em; }
+  table tr {
+    margin: 0; }
+    table tr th {
+      color: #223241;
+      border-bottom: 1px dashed #a3bfbf;
+      margin: 0;
+      padding: 0.5em; }
+    table tr td {
+      margin: 0;
+      padding: 0.5em; }
