--- a/app/views/shared/_soundwalks_index.html.erb
+++ b/app/views/shared/_soundwalks_index.html.erb
@@ -1,21 +1,11 @@
-<table>
-	<div id='stream'>
-		<div id='map'>
-			<%= render :partial => '/shared/soundwalks_map' %>
-		</div>
-		
-		<% if defined? new_soundwalk_option %>
-		<p><%= link_to 'Upload soundwalk', new_soundwalk_path %></p>
-		<% end %>
-		
-		<% @soundwalks.each do |soundwalk| %>
-		<div class='stream_item'>
-			<span class='soundwalk_date'><%= relative_date_in_past(soundwalk.created_at) %></span>
-			<span class='soundwalk_title'><%= link_to soundwalk.title, soundwalk %></span>
-			<span class='soundwalk_description'><%= soundwalk.description %></span>
-		</div>
-		<% end %>
-		
-		<div class='clear'></div>
-	</div>
-</table>
+<%= render :partial => '/shared/soundwalks_map' %>
+
+<% if defined? new_soundwalk_option %>
+<p><%= link_to 'Upload soundwalk', new_soundwalk_path %></p>
+<% end %>
+
+<ol id='stream'>
+<% @soundwalks.each do |soundwalk| %>
+	<%= stream_item(soundwalk, defined? show_users, true) %>
+<% end %>
+</ol>
