--- a/app/views/soundwalks/user.html.erb
+++ b/app/views/soundwalks/user.html.erb
@@ -1,3 +1,3 @@
 <h1><%= @user.login %>'s soundwalks</h1>
 
-<%= render :partial => 'shared/soundwalks_index', :locals => {:new_soundwalk_option => true} %>
+<%= render :partial => 'shared/soundwalks_index', :locals => {:new_soundwalk_option => true, :show_avatars => true} %>
