--- a/app/views/shared/_soundwalks_map.html.erb
+++ b/app/views/shared/_soundwalks_map.html.erb
@@ -3,13 +3,14 @@
 map = GoogleMap.new(:scroll_wheel_zoom => true, :controls => [:zoom, :scale], :map_type => 'G_HYBRID_MAP')
 
 @soundwalks.each do |soundwalk|
-	html = '<h3>Soundwalk ' + soundwalk.id.to_s + '</h3>'
+	html = stream_item(soundwalk, true, false)
 	map.markers << GoogleMapMarker.new(:map => map, :lat => soundwalk.lat, :lng => soundwalk.lng, :html => html)
+	#map.overlays << GoogleMapPolyline.new(:vertices => soundwalk.vertices, :color => '#55ef55', :weight => 4, :opacity => 0.75)
 end
 
 %>
 
-<%#= map.to_html %>
+<%= map.to_html %>
 <div id='soundwalk-index-map'>
-	<%#= map.div %>
+	<%= map.div %>
 </div>
