--- a/app/views/sounds/_form.html.erb
+++ b/app/views/sounds/_form.html.erb
@@ -1,24 +1,33 @@
 <% form_for [@soundwalk, @sound], :html => {:multipart => true} do |form| %>
 	<%= form.error_messages %>
 	
-	<p>
-		<%= label_tag 'Sound File' %><br />
-		<%= file_field :upload, :file %>
-	</p>
-	<p>
-		<%= form.label :description %><br />
-		<%= form.text_area :description %>
-	<p>
-	<p>
-		<%= form.label :lat %><br />
-		<%= form.text_field :lat %><br />
-		<%= form.label :lng %><br />
-		<%= form.text_field :lng %><br />
-	</p>
-	<p>
-		<%= form.label :recorded_at %><br />
-		<%= datetime_select ('sound', :recorded_at) %>
-	<p>
-		<%= form.submit 'Save' %>
-	</p>
+	<div>
+		<%= label_tag 'upload_sound_file', label_with_errors(@sound, 'upload', 'Sound file'), :class => 'field' %>
+		<div class='fileinput'>
+			<%= file_field :upload, :sound_file, :class => 'file' %>
+		</div>
+	</div>
+	<div>
+		<%= form.label :description, label_with_errors(@sound, 'description', 'Description'), :class => 'field' %>
+		<%= form.text_area :description, :class => 'field' %>
+	</div>
+	<div>
+		<%= form.label :lat, label_with_errors(@sound, 'lat', 'Latitude'), :class => 'field' %>
+		<%= form.text_field :lat, :class => 'field' %>
+	</div>
+	<div>
+		<%= form.label :lng, label_with_errors(@sound, 'lng', 'Longitude'), :class => 'field' %>
+		<%= form.text_field :lng, :class => 'field' %>
+	</div>
+	<div>
+		<%= form.label :recorded_at, label_with_errors(@sound, 'recorded_at', 'Recorded at'), :class => 'field' %>
+		<%= form.text_field :recorded_at, :class => 'field' %>
+	</div>
+	<div>
+		<%= form.submit 'Save', :class => 'submit' %>
+	</div>
 <% end %>
+
+<script type='text/javascript'>
+	initFileUploads();
+</script>
