--- a/app/views/sounds/new.html.erb
+++ b/app/views/sounds/new.html.erb
@@ -1,3 +1,14 @@
-<h1>New sound</h1>
+<h1>Add Sound to <%= @soundwalk.title %></h1>
 
+<div id='new-sound'>
+	<div class='help'>
+		<p>
+			Here is some text that will display help for uploading sounds to the server.
+		</p>
+		<p>
+			This will contain help for uploading sounds of different types as well as
+			a link to the iPhone App Store to download the iPhone application.
+		</p>
+	</div>
 <%= render :partial => 'form' %>
+</div>
