--- a/app/views/sounds/show.html.erb
+++ b/app/views/sounds/show.html.erb
@@ -11,54 +11,54 @@ map.markers << GoogleMapMarker.new(:map => map, :lat => @sound.lat, :lng => @sou
 
 %>
 
-<div id='showsound'>
-	<p id='showfeatures'>
-		<%= feature_chart('loudness', limit_granularity(filter_feature_values(@sound.features[:loudness])), 0, 'ab4444') %><br/>
-		<%= feature_chart('temporal sparsity', limit_granularity(@sound.features[:temporal_sparsity]), 'auto', '44ab44') %><br/>
-		<%= feature_chart('spectral sparsity', limit_granularity(@sound.features[:spectral_sparsity]), 'auto', '4444ab') %><br/>
-		<%= feature_chart('spectral centroid', limit_granularity(@sound.features[:spectral_centroid]), 'auto', 'abab44') %><br/>
-		<%= feature_chart('transient index', limit_granularity(@sound.features[:transient_index]), 'auto', '44abab') %><br/>
-		<%= feature_chart('harmonicity', limit_granularity(@sound.features[:harmonicity]), 'auto', 'ab44ab') %><br/>
-	</p>
+<%= render :partial => 'shared/user_profile', :locals => {:user => @soundwalk.user, :side => 'right'} %>
 
-	<h1>
-		<%= @soundwalk.title %>
-	</h1>
-	
-	<div id='shownavigation'>
-		<h1 id='previous'><%= link_to @sounds[previous_index].id, soundwalk_sound_path(@soundwalk, @sounds[previous_index]) %>
-		<h1 id='current'><%= @sound.id %>
-		<h1 id='next'><%= link_to @sounds[next_index].id, soundwalk_sound_path(@soundwalk, @sounds[next_index]) %>
-	</div>
-	
-	<p id='showdescription'>
-		<%=h @sound.description %>
-	</p>
-	
-	<p id='showdetails'>
-		<b>Filename: </b><%=h @sound.filename %><br/>
-		<b>Duration: </b><%= sprintf('%.2f', @sound.samples.to_f / @sound.sample_rate.to_f) %>s (<%= @sound.samples %> samples, <%= @sound.frames %> frames)<br/>
-		<b>Sample rate: </b><%= @sound.sample_rate %><br/>
-		<b>Frame length: </b><%= @sound.frame_length %>s (<%= @sound.frame_size %> samples)<br/>
-		<b>Hop size: </b><%= @sound.hop_length %>s (<%= @sound.hop_size %> samples)<br/>
-		<b>Spectrum size: </b><%= @sound.spectrum_size %><br/>
-		<b>Recorded at: </b><%= @sound.recorded_at %><br/>
-		<b>Created at: </b><%= @sound.created_at %><br/>
-		<b>Updated at: </b><%= @sound.updated_at %>
-	</p>
-	
-	<%= map.to_html %>
-  	<div id='showmap'>
-    	<%= map.div %>
-  	</div>
-	
-	<p>
-	<%= link_to 'Edit sound', edit_soundwalk_sound_path(@soundwalk, @sound) %>
-	<%= link_to 'Delete sound', soundwalk_sound_path(@soundwalk, @sound), :confirm => 'Are you sure?', :method => :delete %>
-	<%= link_to 'Recalculate features', :controller => 'sounds', :action => 'recalculate', :id => @sound.id, :soundwalk_id => @soundwalk.id %>
-	</p>
-	
-	<p>
-		<%= link_to @soundwalk.title + ' index', soundwalk_sounds_path(@soundwalk) %>
-	</p>
+<h2><%= link_to @soundwalk.title, user_soundwalk_path(@soundwalk.user, @soundwalk) %> - <%= link_to 'Sound ' + @sound.id.to_s, soundwalk_sound_path(@soundwalk, @sound) %></h2>
+
+<%= map.to_html %>
+<div id='sound-map'>
+  	<%= map.div %>
 </div>
+
+<div id='sound-navigation'>
+	<span class='previous'><%= link_to @sounds[previous_index].id, soundwalk_sound_path(@soundwalk, @sounds[previous_index]) %></span>
+	<span class='current'><%= @sound.id %></span>
+	<span class='next'><%= link_to @sounds[next_index].id, soundwalk_sound_path(@soundwalk, @sounds[next_index]) %></span>
+</div>
+
+<p id='sound-description'>
+	<%=h @sound.description %>
+</p>
+	
+<p id='sound-details'>
+	<%= embed_sound_tag(@soundwalk, @sound, 30, 1.6) %><br />
+	<b>Filename: </b><%=h @sound.filename %><br/>
+	<b>Duration: </b><%= sprintf('%.2f', @sound.samples.to_f / @sound.sample_rate.to_f) %>s (<%= @sound.samples %> samples, <%= @sound.frames %> frames)<br/>
+	<b>Sample rate: </b><%= @sound.sample_rate %><br/>
+	<b>Frame length: </b><%= @sound.frame_length %>s (<%= @sound.frame_size %> samples)<br/>
+	<b>Hop size: </b><%= @sound.hop_length %>s (<%= @sound.hop_size %> samples)<br/>
+	<b>Spectrum size: </b><%= @sound.spectrum_size %><br/>
+	<b>Recorded at: </b><%= @sound.recorded_at %><br/>
+	<b>Created at: </b><%= @sound.created_at %><br/>
+	<b>Updated at: </b><%= @sound.updated_at %>
+</p>
+
+<p>
+	<%= link_to 'Edit sound', edit_soundwalk_sound_path(@soundwalk, @sound) %><br />
+	<%= link_to 'Delete sound', soundwalk_sound_path(@soundwalk, @sound), :confirm => 'Are you sure?', :method => :delete %><br />
+	<%= link_to 'Recalculate features', :controller => 'sounds', :action => 'recalculate', :id => @sound.id, :soundwalk_id => @soundwalk.id %>
+</p>
+	
+<p><%= link_to @soundwalk.title + ' index', soundwalk_sounds_path(@soundwalk) %></p>
+
+<div class='clear'></div>
+
+<h2>Features</h2>
+<p id='sound-features'>
+	<%= feature_chart('loudness', limit_granularity(filter_feature_values(@sound.features[:loudness])), 0, 'ab4444') %>
+	<%= feature_chart('temporal sparsity', limit_granularity(@sound.features[:temporal_sparsity]), 'auto', '44ab44') %><br/>
+	<%= feature_chart('spectral sparsity', limit_granularity(@sound.features[:spectral_sparsity]), 'auto', '4444ab') %>
+	<%= feature_chart('spectral centroid', limit_granularity(@sound.features[:spectral_centroid]), 'auto', 'abab44') %><br/>
+	<%= feature_chart('transient index', limit_granularity(@sound.features[:transient_index]), 'auto', '44abab') %>
+	<%= feature_chart('harmonicity', limit_granularity(@sound.features[:harmonicity]), 'auto', 'ab44ab') %><br/>
+</p>
