--- a/app/views/soundwalks/public.html.erb
+++ b/app/views/soundwalks/public.html.erb
@@ -1,3 +1,3 @@
 <h1>All soundwalks</h1>
 
-<%= render :partial => 'shared/soundwalks_index' %>
+<%= render :partial => 'shared/soundwalks_index', :locals => {:show_users => :true} %>
