--- a/public/stylesheets/sass/_forms.sass
+++ b/public/stylesheets/sass/_forms.sass
@@ -39,6 +39,7 @@ input
 		margin: 0.5em
 		margin-left: 10.5em
 		width: 11em
+		clear: left
 
 	&.button
 		width: 7.5em
@@ -62,6 +63,11 @@ input
 		font-size: 1em
 		height: 3.5em
 
+div.select
+	padding-top: 0.5em
+	font-size: 1em
+	height: 3.0em
+	
 textarea.field
 	+rounded_border
 	font-family = !fonts_normal
