--- a/public/stylesheets/sass/_main.sass
+++ b/public/stylesheets/sass/_main.sass
@@ -29,10 +29,32 @@ h1
 	
 	color = !red
 	text-align: center
+	
+	a
+		color = !red
+		
+h2
+	width: 100%
+	margin: 0
+		top: 1em
+		bottom: 1em
+	padding: 0
+		bottom: 0.5em
+	
+	border-bottom = !dashed_border
+	font-size: 1.2em
+	color = !dark_blue
+	text-align: center
 
 a
 	color = !dark_blue
 	text-decoration: none
+	
+	&:hover
+		color = !red
+		
+	img
+		border: none
 
 #notice
 	color = !green
