--- a/public/stylesheets/sass/_variables.sass
+++ b/public/stylesheets/sass/_variables.sass
@@ -2,6 +2,7 @@
 !red = #bf3030
 !green = #9dbf30
 !light_blue = #a3bfbf
+!very_light_blue = !light_blue / 2 + #999999
 !dark_blue = #223241
 !tan = #efebe6
 !gray = #888888
@@ -13,14 +14,15 @@
 // Borders.
 !dashed_border = 1px dashed #a3bfbf
 !thick_border = 3px double #a3bfbf
+!solid_border = 1px solid #a3bfbf
 
 // Dimensions.
 !big_width = 60em
 !little_width = 35em
 
 // Maps.
-!square_map_width = 25em
-!square_map_height = 25em
+!square_map_width = 22em
+!square_map_height = 22em
 !rectangle_map_height = 10em
 
 // Mixins.
