--- a/public/stylesheets/sass/_profile.sass
+++ b/public/stylesheets/sass/_profile.sass
@@ -1,11 +1,22 @@
 @import variables.sass
 
-#profile-avatar
-	float: left
-	border = !thick_border
-	margin-right: 1em
-
 #user-profile
 	text-align: left
+	margin: 0
+	padding: 0
+	
 	h1
 		text-align: left
+		border: none
+		margin: 0
+		
+	#profile-avatar
+		float: left
+		border = !thick_border
+		margin: 0
+		margin-right: 1em
+
+	#profile-menu
+		border-bottom = !solid_border
+		padding-bottom: 0.5em
+		
