--- a/public/stylesheets/sass/_variables.sass
+++ b/public/stylesheets/sass/_variables.sass
@@ -8,8 +8,8 @@
 !gray = #888888
 
 // Fonts.
-!fonts_normal = "Lucida Sans Unicode", "Lucida Grande", Verdana, Arial, Helvetica, sans-serif
-!fonts_styled = "Lucida Sans", "Lucida Sans Unicode", "Lucida Grande", Verdana, Arial, Helvetica, sans-serif
+!fonts_normal = "Lucida Sans Unicode", "Lucida Grande", "Verdana", "Arial", "Helvetica", "sans-serif"
+!fonts_styled = "Lucida Sans", "Lucida Sans Unicode", "Lucida Grande", "Verdana", "Arial", "Helvetica", "sans-serif"
 
 // Borders.
 !dashed_border = 1px dashed #a3bfbf
