--- a/public/stylesheets/sass/_variables.sass
+++ b/public/stylesheets/sass/_variables.sass
@@ -12,9 +12,9 @@
 !fonts_styled = "Lucida Sans", "Lucida Sans Unicode", "Lucida Grande", "Verdana", "Arial", "Helvetica", "sans-serif"
 
 // Borders.
-!dashed_border = 1px dashed #a3bfbf
-!thick_border = 3px double #a3bfbf
-!solid_border = 1px solid #a3bfbf
+!dashed_border = 1px "dashed" #a3bfbf
+!thick_border = 3px "double" #a3bfbf
+!solid_border = 1px "solid" #a3bfbf
 
 // Dimensions.
 !big_width = 60em
