--- a/public/stylesheets/sass/_main.sass
+++ b/public/stylesheets/sass/_main.sass
@@ -57,5 +57,11 @@ a
   img
     border: none
 
-#notice
+p.notice
+  font-size: 1em
   color = !green
+
+p.error
+  font-size: 1em 
+  text-align: center
+  color = !red
