--- a/public/stylesheets/sass/_containers.sass
+++ b/public/stylesheets/sass/_containers.sass
@@ -4,7 +4,7 @@
   width = !big_width
   margin: 2em auto 0 auto
   padding: 0
-  border-bottom: 0.125em solid #{!dark_blue}
+  border-bottom = "0.125em solid " + !dark_blue
   text-align: center
   
   #user-panel
@@ -27,7 +27,7 @@
   width = !big_width
   margin: 0 auto 0 auto
   padding: 0
-  border: 1px solid #{!light_blue}
+  border = "1px solid " + !light_blue
   background-color: white
   text-align: left
   
