--- a/public/stylesheets/sass/_variables.sass
+++ b/public/stylesheets/sass/_variables.sass
@@ -38,4 +38,4 @@
   -moz-border-radius: 0.5em
   -webkit-border-radius: 0.5em
   border-radius: 0.5em
-  border: 1px dashed #{!gray}
+  border = "1px dashed " + !gray
